--- a/views/clientes.xml
+++ b/views/clientes.xml
@@ -1,62 +1,68 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <data>
-        <act_window id="tiendaodoo_clientes_action"
-                    name="Clientes"
-                    res_model="tiendaodoo.clientes" />
-        <menuitem name="Stock" id="menu_clientes" sequence="10" />
-        <menuitem id="tiendaodoo_clientes_menu"
-                  name="Clientes"
-                  action="tiendaodoo_clientes_action"
-                  parent="menu_clientes"
-                  sequence="10" />
-        <record id="tiendaodoo_clientes_view_tree" model="ir.ui.view">
-            <field name="name">Lista de clientes</field>
-            <field name="model">tiendaodoo.clientes</field>
+        <act_window id="tienda_clientes_action" name="clientes"
+                    res_model="tienda.clientes"/>
+
+        <record id="tienda_clientes_view_tree" model="ir.ui.view">
+            <field name="name">Lista clientes</field>
+            <field name="model">tienda.clientes</field>
             <field name="arch" type="xml">
                 <tree>
-                    <field name="nombre" />
-                    <field name="apellidos" />
-                    <field name="edad" />
-                    <field name="telefono" />
-
+                    <field name="dni"/>
+                    <field name="nombre"/>
+                    <field name="apellidos"/>
+                    <field name="direccion"/>
+                    <field name="poblacion"/>
+                    <field name="provincia"/>
+                    <field name="codPostal"/>
+                    <field name="telefono"/>
+                    <field name="email"/>
                 </tree>
             </field>
         </record>
-        <record id="tiendaodoo_clientes_view_form" model="ir.ui.view">
-            <field name="name">Registro de consolas</field>
-            <field name="model">tiendaodoo.clientes</field>
+		
+		<record id="tienda_clientes_view_form" model="ir.ui.view">
+            <field name="name">Formulario de clientes</field>
+            <field name="model">tienda.clientes</field>
             <field name="arch" type="xml">
                 <form>
-                    <header>
-                        <button name="limpiar" type="object" string="Limpia" class="oe_highlight" />
-                        <button name="limpia_todo" type="object" string="Limpia todo" class="oe_highlight" />
-
-                    </header>
                     <group>
-                    <field name="nombre" />
-                    <field name="apellidos" />
-                    <field name="edad" />
-                    <field name="telefono" />
-
+						<field name="dni"/>
+						<field name="nombre"/>
+						<field name="apellidos"/>
+						<field name="direccion"/>
+						<field name="poblacion"/>
+						<field name="provincia"/>
+						<field name="codPostal"/>
+						<field name="telefono"/>
+						<field name="email"/>
                     </group>
                 </form>
             </field>
         </record>
 
-        <record id="tiendaodoo_clientes_view_search" model="ir.ui.view">
-            <field name="name">Busqueda de consolas</field>
-            <field name="model">tiendaodoo.clientes</field>
+        <record id="tienda_clientes_view_search" model="ir.ui.view">
+            <field name="name">Busqueda clientes</field>
+            <field name="model">tienda.clientes</field>
             <field name="arch" type="xml">
                 <search>
-                    <field name="nombre" />
-                    <field name="apellidos" />
-                    <field name="edad" />
-                    <field name="telefono" />
-
+                    <field name="dni"/>
+                    <field name="nombre"/>
+                    <field name="apellidos"/>
+                    <field name="direccion"/>
+                    <field name="poblacion"/>
+                    <field name="provincia"/>
+                    <field name="codPostal"/>
+                    <field name="telefono"/>
+                    <field name="email"/>
                 </search>
             </field>
         </record>
+        <menuitem name="Tienda" id="tienda_clientes" sequence="10"/>
+        <menuitem name="Inicio" id="menu_inicio" parent="tienda_clientes" sequence="10"/>
+        <menuitem name="Clientes" id="clientes" action="tienda_clientes_action" parent="menu_inicio"
+                  sequence="10"/>
 
     </data>
 </odoo>
