--- a/views/proveedores.xml
+++ b/views/proveedores.xml
@@ -1,62 +1,65 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
     <data>
-        <act_window id="tiendaodoo_proveedores_action"
-                    name="Proveedores"
-                    res_model="tiendaodoo.proveedores" />
-        <menuitem id="tiendaodoo_proveedores_menu"
-                  name="Proveedores"
-                  action="tiendaodoo_proveedores_action"
-                  parent="menu_clientes"
-                  sequence="13" />
+        <act_window id="tienda_proveedores_action" name="proveedores"
+                    res_model="tienda.proveedores"/>
 
-        <record id="tiendaodoo_proveedores_view_tree" model="ir.ui.view">
-            <field name="name">Lista de proveedores</field>
-            <field name="model">tiendaodoo.proveedores</field>
+        <record id="tienda_proveedores_view_tree" model="ir.ui.view">
+            <field name="name">Lista proveedores</field>
+            <field name="model">tienda.proveedores</field>
             <field name="arch" type="xml">
                 <tree>
-                    <field name="cif" />
-                    <field name="nombre" />
-                    <field name="telefono" />
-                    <field name="calle" />
-
+                    <field name="cif"/>
+                    <field name="nombre"/>
+                    <field name="direccion"/>
+                    <field name="poblacion"/>
+                    <field name="provincia"/>
+                    <field name="codPostal"/>
+                    <field name="telefono"/>
+                    <field name="email"/>
                 </tree>
             </field>
         </record>
-
-        <record id="tiendaodoo_proveedores_view_form" model="ir.ui.view">
+		
+		<record id="tienda_clientes_view_form" model="ir.ui.view">
             <field name="name">Formulario de proveedores</field>
-            <field name="model">tiendaodoo.proveedores</field>
+            <field name="model">tienda.proveedores</field>
             <field name="arch" type="xml">
                 <form>
-                    <header>
-                        <button name="limpiar" type="object" string="Limpia" class="oe_highlight" />
-                        <button name="limpia_todo" type="object" string="Limpia todo" class="oe_highlight" />
-
-                    </header>
                     <group>
-                        <field name="cif" />
-                        <field name="nombre" />
-                        <field name="telefono" />
-                        <field name="calle" />
-
+						<field name="cif"/>
+						<field name="nombre"/>
+						<field name="direccion"/>
+						<field name="poblacion"/>
+						<field name="provincia"/>
+						<field name="codPostal"/>
+						<field name="telefono"/>
+						<field name="email"/>
                     </group>
                 </form>
             </field>
         </record>
-
-        <record id="tiendaodoo_proveedores_view_search" model="ir.ui.view">
-            <field name="name">Busqueda de proveedores</field>
-            <field name="model">tiendaodoo.proveedores</field>
+		
+        <record id="tienda_proveedores_view_search" model="ir.ui.view">
+            <field name="name">Busqueda proveedores</field>
+            <field name="model">tienda.proveedores</field>
             <field name="arch" type="xml">
                 <search>
-                    <field name="cif" />
-                    <field name="nombre" />
-                    <field name="telefono" />
-                    <field name="calle" />
-
+                    <field name="cif"/>
+                    <field name="nombre"/>
+                    <field name="direccion"/>
+                    <field name="poblacion"/>
+                    <field name="provincia"/>
+                    <field name="codPostal"/>
+                    <field name="telefono"/>
+                    <field name="email"/>
                 </search>
             </field>
         </record>
+        <menuitem name="Tienda" id="tienda_proveedores" sequence="10"/>
+        <menuitem name="Inicio" id="menu_inicio" parent="tienda_proveedores" sequence="10"/>
+        <menuitem name="Proveedores" id="proveedores" action="tienda_proveedores_action" parent="menu_inicio"
+                  sequence="10"/>
+
     </data>
 </odoo>
